<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/email_input"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_email_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:padding="16dp" />

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:onClick="sendCode"
        android:text="@string/send_code"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@id/send_code_button"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_lock_ic"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/code"
        android:padding="16dp" />

    <Button
        android:id="@+id/verify_code_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/code_input"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:onClick="verifyCode"
        android:text="@string/verify_code"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_bg"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

</RelativeLayout>
