<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/text_35_black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_email_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/email_input">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_lock_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp" />
</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient_border"
        android:text="@string/sign_in"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

    <Button
        android:id="@+id/recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_bg"
        android:text="@string/recover_password"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recover_password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:text="@string/sign_up"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

</RelativeLayout>